// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` camera mapping test  works as planned:  after Closing pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  after Fetching cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  after Opening pop up  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  after Setting Camera  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "value": "c2bbbbbbbbbbbbbbbbbbbbbb",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  after preparing cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned: Before anything 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 13,
    "mapTo": "camera",
    "theme": "program",
    "validate": {
      "relationshipNamePath": "name",
      "relationshipCollection": "cameras",
      "relationshipIdPath": "_id"
    }
  },
  "prefix": "shotEdit",
  "theme": "program",
  "cameras": []
}
</div>
`;
